# pycon-build-2024

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.job  README.md  chat-app.py  chat_app.py  database.py  embeddings.py  indexer-job.yaml  indexer_job.py  pyproject.toml
.chainlit/: config.toml
.chainlit/translations/: en-US.json
public/: stylesheet.css
